fix: changing test